--- a/TMS_FrontEnd/src/app/app.component.html
+++ b/TMS_FrontEnd/src/app/app.component.html
@@ -59,7 +59,7 @@
         <li>
 
             <a  class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-grey-400 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-blue-400 dark:hover:text-white md:dark:hover:bg-transparent transition-transform transform hover:scale-115 duration-300"aria-current="page"
-            routerLink="/admin/dashboard" routerLinkActive="active" >Dashboard</a>
+            [routerLink]="'/admin/dashboard'" routerLinkActive="active" >Dashboard</a>
           
         </li>
 
